# wok

./: .gitignore  .gitmessage  .v0.rc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  quench.toml
.cargo/: config.toml
.claude/: settings.json  sync
.github/: CODEOWNERS  thresholds.json
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  quality.yml  release.yml  specs.yml
.oj/runbooks/: base.hcl  bug.hcl  bugfix.hcl  build.hcl  chore.hcl  epic.hcl  merge.hcl  release.hcl
.work/: config.toml  issues.db
checks/benchmarks/: README.md  compare.sh  run.sh
checks/quality/: README.md  coverage.sh  evaluate.sh  weekly.sh
checks/specs/: CLAUDE.md  README.md  run.sh
checks/stress/: README.md  docker-run.sh  run.sh
crates/cli/: CLAUDE.md  Cargo.toml  REQUIREMENTS.md  build.rs  coverage.sh  rustfmt.toml
crates/cli/benches/: filter.rs  priority.rs  row_mapping.rs
crates/cli/src/: cli.rs  colors.rs  colors_tests.rs  completions.rs  completions_tests.rs  config.rs  config_tests.rs  db_handle.rs  display.rs  display_tests.rs  env.rs  env_tests.rs  error.rs  error_tests.rs  git_hooks.rs  git_hooks_tests.rs  help.rs  help_tests.rs  id.rs  id_tests.rs  lib.rs  lib_tests.rs  main.rs  mode.rs  mode_tests.rs  normalize.rs  normalize_tests.rs  timings.rs  validate.rs  validate_tests.rs  wal.rs  wal_tests.rs  worktree.rs  worktree_tests.rs
crates/cli/src/cli/: args.rs  mod.rs
crates/cli/src/cli_tests/: dep_tests.rs  directory_tests.rs  edit_tests.rs  flags_tests.rs  help_tests.rs  hooks_tests.rs  init_tests.rs  io_tests.rs  lifecycle_tests.rs  link_tests.rs  list_tests.rs  mod.rs  new_tests.rs  show_tests.rs
crates/cli/src/commands/: config.rs  config_tests.rs  daemon.rs  dep.rs  dep_tests.rs  edit.rs  edit_tests.rs  export.rs  export_tests.rs  filtering.rs  filtering_tests.rs  hlc_persistence.rs  hlc_persistence_tests.rs  hook.rs  hook_tests.rs  hooks.rs  hooks_tests.rs  import.rs  import_tests.rs  init.rs  init_tests.rs  label.rs  label_tests.rs  lifecycle.rs  lifecycle_tests.rs  link.rs  link_tests.rs  list.rs  list_tests.rs  log.rs  log_tests.rs  mod.rs  mod_tests.rs  new.rs  new_deps_tests.rs  new_tests.rs  note.rs  note_tests.rs  prime.md  prime.rs  (+13 more)
crates/cli/src/daemon/: cache.rs  client.rs  connection.rs  connection_tests.rs  ipc.rs  ipc_tests.rs  lifecycle.rs  lifecycle_tests.rs  mod.rs  runner.rs  runner_tests.rs  sync.rs  sync_tests.rs
crates/cli/src/db/: deps.rs  deps_tests.rs  events.rs  events_tests.rs  issues.rs  issues_tests.rs  labels.rs  labels_tests.rs  links.rs  links_tests.rs  mod.rs  mod_tests.rs  notes.rs  notes_tests.rs  prefixes.rs  schema.rs  schema.sql
crates/cli/src/filter/: eval.rs  eval_tests.rs  expr.rs  expr_tests.rs  mod.rs  parser.rs  parser_tests.rs
crates/cli/src/hooks/: config.rs  config_tests.rs  event.rs  event_tests.rs  executor.rs  executor_tests.rs  filter.rs  filter_tests.rs  mod.rs  mod_tests.rs  payload.rs  payload_tests.rs  runner.rs  runner_tests.rs
crates/cli/src/models/: dependency.rs  dependency_tests.rs  event.rs  event_tests.rs  issue.rs  issue_tests.rs  link.rs  link_tests.rs  mod.rs  note.rs  note_tests.rs  prefix.rs
crates/cli/src/schema/: list.rs  mod.rs  ready.rs  search.rs  show.rs
crates/cli/src/sync/: client.rs  client_tests.rs  integration_tests.rs  mod.rs  queue.rs  queue_tests.rs  test_helpers.rs  transport.rs  transport_tests.rs
crates/cli/tests/: common.rs  dependencies.rs  import.rs  init.rs  lifecycle.rs  list.rs  metadata.rs  normalize.rs  output.rs  specs.rs  specs_prelude.rs  sync.rs  transport.rs
crates/core/: CLAUDE.md  Cargo.toml  clippy.toml  coverage.sh
crates/core/src/: db.rs  db_tests.rs  detect.rs  detect_tests.rs  error.rs  error_tests.rs  hlc.rs  hlc_tests.rs  hooks.rs  hooks_tests.rs  identity.rs  identity_tests.rs  issue.rs  issue_tests.rs  jsonl.rs  jsonl_tests.rs  lib.rs  link.rs  link_tests.rs  merge.rs  merge_tests.rs  op.rs  op_tests.rs  oplog.rs  oplog_tests.rs  protocol.rs  protocol_tests.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: db.rs  env.rs  env_tests.rs  ipc.rs  main.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  lib_tests.rs
crates/remote/: CLAUDE.md  Cargo.toml  coverage.sh
crates/remote/src/: git_backing.rs  git_backing_tests.rs  main.rs  server.rs  server_tests.rs  state.rs
crates/remote/tests/: integration.rs
docs/: SPECIFICATION.md
docs/reports/: index.html
docs/specs/: 01-overview.md  02-core-concepts.md  03-data-model.md  04-cli-interface.md  05-business-rules.md  06-storage-config.md  07-hooks.md  07-remote-sync.md  08-project-structure.md  CLAUDE.md
plans/: add-dash-C.md  attachments.md  background-connection.md  benchmarks.md  cli-init-review.md  cli-list-review.md  criterion.md  debt-1-init-boilerplate.md  debt-10-input-errors.md  debt-2-bulk-ops.md  debt-3-mutation-helper.md  debt-4-schema-unify.md  debt-5-filter-module.md  debt-6-hlc-persistence.md  debt-7-jsonl-trait.md  debt-8-status-conv.md  debt-9-validation.md  default-local.md  desc-flag.md  edit-field-flags.md  filter-done.md  filter-status.md  fix-list-ready-perf.md  fix-specs-remote.md  fuzz.md  github-ci.md  ideas.md  json-schemas.md  lenient-transitions.md  list-ids.md  new-issue-deps.md  otterjobs-daemon.md  partial-bulk.md  prefix-filter.md  prefixes.md  ready-performance.md  rename-output-flags.md  schema.md  show-many-jsonl.md  spec-setup-review.md  (+5 more)
reports/: architecture-performance-analysis.md
scripts/: append-bench-history.sh  append-quality-history.sh  generate-bench-report.sh  init-worktree  install  license  lint-policy  release  spec  validate
tests/specs/: CLAUDE.md  Cargo.toml  README.md  (+2 more)
(+229 files in other folders)
