[package]
name = "wk"
version = "0.1.0"
edition = "2021"

[lib]
name = "wkrs"
path = "src/lib.rs"

[[bin]]
name = "wk"
path = "src/main.rs"

[dependencies]
wk-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
fs2 = "0.4"
crossterm = "0.27"
regex = "1"
dirs = "5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
yare = "3"
