[package]
name = "wk"
version.workspace = true
edition.workspace = true

[lib]
name = "wkrs"
path = "src/lib.rs"

[[bin]]
name = "wk"
path = "src/main.rs"

[dependencies]
wk-core = { path = "../core" }
clap = { version = "4", features = ["derive", "color"] }
anstyle = "1"
clap_complete = "4"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
schemars = { version = "0.8", features = ["chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.28"
futures-util = "0.3"
tracing = "0.1"
fs2 = "0.4"
crossterm = "0.29"
regex = "1"
dirs = "6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
similar-asserts = "1"
yare = "3"
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[test]]
name = "spec_new"
path = "../../tests/specs/cli/new.rs"

[[test]]
name = "spec_list"
path = "../../tests/specs/cli/list.rs"

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "priority"
harness = false

[[bench]]
name = "row_mapping"
harness = false
