[package]
name = "wk-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
is-terminal = "0.4"
dirs = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "term"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
tempfile = "3"
yare = "3"
