[package]
name = "wokd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wokd"
path = "src/main.rs"

[dependencies]
wk-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
dirs = "6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
