[package]
name = "wokd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wokd"
path = "src/main.rs"

[dependencies]
wk-core = { path = "../core" }
wk-ipc = { path = "../ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
dirs = "6"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
