[package]
name = "wk-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
wk-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
yare = "3"
