[package]
name = "wk-remote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wk-remote"
path = "src/main.rs"

[dependencies]
wk-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
tempfile = "3"
